TODO: work on about me section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <script type="text/javascript" src="http://livejs.com/live.js"></script>
     </head>
     <body>
-        <header>
+        <!-- <header>
             <div class="logo">
                 <img src="" alt="" />
             </div>
@@ -51,12 +51,12 @@
                     </li>
                 </ul>
             </nav>
-        </header>
+        </header> -->
 
         <!-- Introduction  -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                Hi, I am <strong>Jason Song</strong>
+                Hi, I'm <strong>Minkyu Song</strong>
             </h1>
             <p class="section_subtitle section__subtitle--intro">
                 Computer Engineer
@@ -68,98 +68,32 @@
             />
         </section>
 
-        <!-- My services -->
-        <section class="my-services" id="services">
-            <h2 class="section__title section__title--services">What I do</h2>
-            <div class="services">
-                <div class="service">
-                    <h3>Service 1</h3>
-                    <p>
-                        The computer wouldn't start. She banged on the side and
-                        tried again. Nothing. She lifted it up and dropped it to
-                        the table. Still nothing. She banged her closed fist
-                        against the top. It was at this moment she saw the irony
-                        of trying to fix the machine with violence.
-                    </p>
-                </div>
-                <!-- service-->
-                <div class="service">
-                    <h3>Service 2</h3>
-                    <p>
-                        The computer wouldn't start. She banged on the side and
-                        tried again. Nothing. She lifted it up and dropped it to
-                        the table. Still nothing. She banged her closed fist
-                        against the top. It was at this moment she saw the irony
-                        of trying to fix the machine with violence.
-                    </p>
-                </div>
-                <!-- service-->
-                <div class="service">
-                    <h3>Service 3</h3>
-                    <p>
-                        The computer wouldn't start. She banged on the side and
-                        tried again. Nothing. She lifted it up and dropped it to
-                        the table. Still nothing. She banged her closed fist
-                        against the top. It was at this moment she saw the irony
-                        of trying to fix the machine with violence.
-                    </p>
-                </div>
-                <!-- service-->
-
-                <a href="#work" class="btn">My work</a>
-            </div>
-        </section>
-
         <!-- About Me -->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about"></p>
+            <!-- <p class="section__subtitle section__subtitle--about"></p> -->
 
             <div class="about-me__body">
-                <p>
-                    The computer wouldn't start. She banged on the side and
-                    tried again. Nothing. She lifted it up and dropped it to the
-                    table. Still nothing. She banged her closed fist against the
-                    top. It was at this moment she saw the irony of trying to
-                    fix the machine with violence.
-                </p>
-                <p>
-                    The computer wouldn't start. She banged on the side and
-                    tried again. Nothing. She lifted it up and dropped it to the
-                    table. Still nothing. She banged her closed fist against the
-                    top. It was at this moment she saw the irony of trying to
-                    fix the machine with violence.
-                </p>
+                <div class="about-me__body--text">
+                    <p>
+                        The computer wouldn't start. She banged on the side and
+                        tried again. Nothing. She lifted it up and dropped it to
+                        the table. Still nothing. She banged her closed fist
+                        against the top. It was at this moment she saw the irony
+                        of trying to fix the machine with violence.
+                    </p>
+                </div>
+                <div class="about-me__vertical-menu">
+                    <ul>
+                        <li>Hello</li>
+                        <li>HI</li>
+                        <li>Yo</li>
+                        <li>Suh</li>
+                    </ul>
+                </div>
             </div>
 
             <img />
-        </section>
-
-        <!-- My work -->
-        <section class="my-work" id="work">
-            <h2 class="section__title">My work</h2>
-            <p class="section__subtitle"></p>
-            <!-- portfolio -->
-            <div class="portfolio">
-                <a href="#" class="portfolio__item">
-                    <!-- Content -->
-                </a>
-                <a href="#" class="portfolio__item">
-                    <!-- Content -->
-                </a>
-                <a href="#" class="portfolio__item">
-                    <!-- Content -->
-                </a>
-                <a href="#" class="portfolio__item">
-                    <!-- Content -->
-                </a>
-                <a href="#" class="portfolio__item">
-                    <!-- Content -->
-                </a>
-                <a href="#" class="portfolio__item">
-                    <!-- Content -->
-                </a>
-            </div>
         </section>
 
         <!-- Footer -->
