index.html moved

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;900&family=Source+Sans+Pro:wght@300;900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
 
         <script type="text/javascript" src="http://livejs.com/live.js"></script>
     </head>
@@ -51,7 +51,7 @@
             <div class="intro-item image-cropper circle square-100 border">
                 <img
                     class="intro__img"
-                    src="../images/my_main_pic.jpeg"
+                    src="images/my_main_pic.jpeg"
                 />
             </div>
             <div class="intro-item page-title">
@@ -138,5 +138,5 @@
             </ul>
         </footer>
     </body>
-    <script src="../js/script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 </html>
