create re-usable header and footer

--- a/index.html
+++ b/index.html
@@ -23,27 +23,11 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="/css/style.css" />
+        <script src="/components/header.js" type="text/javascript" defer></script>
     </head>
     <body>
         <!-- Naviagation bar -->
-        <div class="all-nav">
-            <nav>
-                <div class="logo">
-                    <h4>Minkyu Song</h4>
-                </div>
-
-                <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">My Projects</a></li>
-                    <li><a href="#">Photos</a></li>
-                </ul>
-                <div class="burger">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
-                </div>
-            </nav>
-        </div>
+        <header-component></header-component>
         <!-- Introduction  -->
         <section class="intro" id="home">
             <div class="intro-item image-cropper circle square-100 border">
