footer sticky -fixed

--- a/pages/my-photos.html
+++ b/pages/my-photos.html
@@ -22,12 +22,7 @@
             href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;900&family=Source+Sans+Pro:wght@300;900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="/css/style.css" />
-        <script
-            src="/components/header.js"
-            type="text/javascript"
-            defer
-        ></script>
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
         <!-- Naviagation bar -->
@@ -37,7 +32,7 @@
                     <h4>Minkyu Song</h4>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/../index.html">Home</a></li>
                     <li><a href="/pages/my-projects.html">My Projects</a></li>
                     <li><a href="/pages/my-photos.html">Photos</a></li>
                 </ul>
@@ -48,71 +43,20 @@
                 </div>
             </nav>
         </div>
-        <!-- Introduction  -->
+        <!-- Introduction -->
         <section class="intro" id="home">
-            <div class="intro-item image-cropper circle square-100 border">
-                <img class="intro__img" src="/images/my_main_pic.jpeg" />
-            </div>
             <div class="intro-item page-title">
                 <h1 class="section__title section__title--intro">
-                    Minkyu Song
+                    My Photos
                 </h1>
             </div>
             <div class="intro-item">
                 <h2 class="section_subtitle section__subtitle--intro">
-                    4th Year Computer Engineering Student at <br />
-                    the University of British Columbia.
+                    Sorry, this page is still under development...
+                    
                 </h2>
             </div>
         </section>
-
-        <!-- About Me -->
-        <section class="about-me" id="about">
-            <h2 class="section__title section__title--about">Who I am</h2>
-            <!-- <p class="section__subtitle section__subtitle--about"></p> -->
-
-            <div class="about-me__body">
-                <div class="about-me__body--text">
-                    <p>
-                        Hello, it's very nice to meet you. My name is Minkyu
-                        Song but I usually go by Jason. Thanks for visiting btw!
-                        To tell you a little bit about myself, I love
-                        all-things-tech, watching sports, gaming, <br />
-                        e-sports, etc. I also love solving complex problems with
-                        simple, elegant code. I must say, I still have a lot to
-                        learn in the space of technology but that makes me super
-                        excited. And for that, I am so grateful and I can't wait
-                        to learn all about them.
-                    </p>
-                </div>
-                <div class="about-me__vertical-menu">
-                    <div
-                        class="vertical-menu-item"
-                        onclick="window.open('https://www.linkedin.com/in/minkyusong/','mywindow');"
-                    >
-                        <i class="fab fa-linkedin icon"></i> LinkedIn
-                    </div>
-                    <div
-                        class="vertical-menu-item"
-                        onclick="window.open('https://github.com/smkjason','mywindow');"
-                    >
-                        <i class="fab fa-github-square icon"></i> GitHub
-                    </div>
-                    <div class="vertical-menu-item" onclick="sendEmail();">
-                        <i class="fas fa-envelope-square icon"></i> Email
-                    </div>
-                    <div
-                        class="vertical-menu-item"
-                        onclick="window.open('https://www.instagram.com/smkjason/','mywindow');"
-                    >
-                        <i class="fab fa-instagram-square icon"></i>Instagram
-                    </div>
-                </div>
-            </div>
-
-            <img />
-        </section>
-
         <!-- Footer -->
         <footer class="footer">
             <p>Minkyu Song</p>
@@ -140,5 +84,4 @@
             </ul>
         </footer>
     </body>
-    <script src="/js/script.js" type="text/javascript"></script>
 </html>
