--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>DevJason Portfolio Website</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+            integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+            crossorigin="anonymous"
+        />
+        <!-- update the fonts here  Google fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;900&family=Source+Sans+Pro:wght@300;900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../css/style.css" />
+    </head>
+    <body>
+        <!-- Naviagation bar -->
+        <div class="all-nav">
+            <nav>
+                <div class="logo">
+                    <h4>Minkyu Song</h4>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/../index.html">Home</a></li>
+                    <li><a href="/pages/my-projects.html">My Projects</a></li>
+                    <li><a href="/pages/my-photos.html">Photos</a></li>
+                </ul>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+        </div>
+        <!-- Introduction -->
+        <section class="intro" id="home">
+            <div class="intro-item page-title">
+                <h1 class="section__title section__title--intro">
+                    My Projects
+                </h1>
+            </div>
+            <div class="intro-item">
+                <h2 class="section_subtitle section__subtitle--intro">
+                    Sorry, this page is still under development...
+                    
+                </h2>
+            </div>
+        </section>
+        <!-- Footer -->
+        <footer class="footer">
+            <p>Minkyu Song</p>
+            <ul class="social-list">
+                <li class="social-list__item">
+                    <a class="social-list__link" href=""
+                        ><i class="fab fa-github"></i
+                    ></a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href=""
+                        ><i class="fab fa-linkedin-in"></i
+                    ></a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href=""
+                        ><i class="far fa-envelope"></i
+                    ></a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href=""
+                        ><i class="fab fa-instagram"></i
+                    ></a>
+                </li>
+            </ul>
+        </footer>
+    </body>
 </html>
