dummy projects added

--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -53,8 +53,62 @@
             <div class="intro-item">
                 <h2 class="section_subtitle section__subtitle--intro">
                     Sorry, this page is still under development...
-                    
                 </h2>
+            </div>
+        </section>
+        <!-- Projects -->
+        <section class="projects">
+            <div class="project-card">
+                <div class="card-image"></div>
+                <div class="card-text">
+                    <span class="date">4 days ago</span>
+                    <h2>Post one</h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Praesentium possimus corporis sequi, rem dolore
+                        deleniti explicabo saepe quo!
+                    </p>
+                </div>
+                <div class="card-techs">
+                    <div class="tech-item">
+                        <img src="/images/nodejs.png" class="tech-image nodejs" />
+                    </div>
+                    <div class="tech-item">
+                        <img
+                            src="/images/android-logo.png"
+                            class="tech-image"
+                        />
+                    </div>
+                    <div class="tech-item">
+                        <img src="/images/java-logo.png" class="tech-image" />
+                    </div>
+                    <div class="tech-item">
+                        <img src="/images/xml-logo.jpg" class="tech-image" />
+                    </div>
+                    <div class="tech-item">
+                        <img src="/images/MongoDB_Logo_FullColorBlack_RGB.png" class="tech-image mongodb" />
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="card-image"></div>
+                <div class="card-text">
+                    <span class="date">4 days ago</span>
+                    <h2>Post one</h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Praesentium possimus corporis sequi, rem dolore
+                        deleniti explicabo saepe quo!
+                    </p>
+                </div>
+                <div class="card-techs">
+                    <div class="tech-item tech-image">
+                        <img src="/images/nodejs.png" />
+                    </div>
+                    <div class="tech-item tech-image">
+                        <img src="/images/android-logo.png" />
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Footer -->
