Projects page done. + Resume added

--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -34,6 +34,7 @@
                 <ul class="nav-links">
                     <li><a href="/../index.html">Home</a></li>
                     <li><a href="/pages/my-projects.html">My Projects</a></li>
+                    <li><a href="/resume.pdf">Resume</a></li>
                     <li><a href="/pages/my-photos.html">Photos</a></li>
                 </ul>
                 <div class="burger">
@@ -52,26 +53,35 @@
             </div>
             <div class="intro-item">
                 <h2 class="section_subtitle section__subtitle--intro">
-                    Sorry, this page is still under development...
+                    Here are some of the projects that I've participated in.
+                    <br />
+                    Click on them to see the repo!
                 </h2>
             </div>
         </section>
         <!-- Projects -->
         <section class="projects">
             <div class="project-card">
-                <div class="card-image"></div>
+                <div class="first-card"></div>
                 <div class="card-text">
-                    <span class="date">4 days ago</span>
-                    <h2>Post one</h2>
+                    <span class="date">Fall 2019</span>
+                    <h2>Jarvis</h2>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Praesentium possimus corporis sequi, rem dolore
-                        deleniti explicabo saepe quo!
+                        This is a native Android App that finds the best time
+                        that works for the most people for a meeting based on
+                        their schedule on Google Calendar. I intergrated Google
+                        Sign-In. Designed the UI by using XML and Java.
+                        Implemented HTTP Request for all communication with the
+                        backend. <br />
+                        Developed with Android Studio.
                     </p>
                 </div>
                 <div class="card-techs">
                     <div class="tech-item">
-                        <img src="/images/nodejs.png" class="tech-image nodejs" />
+                        <img
+                            src="/images/nodejs.png"
+                            class="tech-image nodejs"
+                        />
                     </div>
                     <div class="tech-item">
                         <img
@@ -86,27 +96,73 @@
                         <img src="/images/xml-logo.jpg" class="tech-image" />
                     </div>
                     <div class="tech-item">
-                        <img src="/images/MongoDB_Logo_FullColorBlack_RGB.png" class="tech-image mongodb" />
+                        <img
+                            src="/images/MongoDB_Logo_FullColorBlack_RGB.png"
+                            class="tech-image mongodb"
+                        />
                     </div>
                 </div>
             </div>
             <div class="project-card">
-                <div class="card-image"></div>
+                <div class="second-card"></div>
                 <div class="card-text">
-                    <span class="date">4 days ago</span>
-                    <h2>Post one</h2>
+                    <span class="date">Fall 2020</span>
+                    <h2>Cache Simulation</h2>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Praesentium possimus corporis sequi, rem dolore
-                        deleniti explicabo saepe quo!
+                        This is a project that models and simulates different
+                        types of caches to study and anlayze its effects on CPU
+                        performance. The types of caches implemented include
+                        Direct-Mapped Cacheing, n-way Set Associative Cacheing,
+                        and Victim Caches. I've also utilized GDB Debugger tool
+                        to help me out.
+                        <br />
+                        This project can only be run on Linux OS.
                     </p>
                 </div>
                 <div class="card-techs">
                     <div class="tech-item tech-image">
-                        <img src="/images/nodejs.png" />
+                        <img
+                            src="https://cdn.iconscout.com/icon/free/png-512/c-programming-569564.png"
+                        />
                     </div>
                     <div class="tech-item tech-image">
-                        <img src="/images/android-logo.png" />
+                        <img
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Classic_flat_look_3D.svg/155px-Classic_flat_look_3D.svg.png"
+                        />
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="third-card"></div>
+                <div class="card-text">
+                    <span class="date">January 2020</span>
+                    <h2>InGRADEient</h2>
+                    <p>
+                        This is a mobile app that analyzes the ingredients of
+                        toiletries and gives useful information on its
+                        environmental-friendliness and health-related
+                        information. The list of ingredients is captured through
+                        phone camera which is then analyzed to give its verdict.
+                        We used Google Text Recognition API to read the picture.
+                        I've implemented the UI of taking a picture through the
+                        app with React Native and Expo.
+                    </p>
+                </div>
+                <div class="card-techs">
+                    <div class="tech-item tech-image">
+                        <img
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1280px-React-icon.svg.png"
+                        />
+                    </div>
+                    <div class="tech-item tech-image">
+                        <img
+                            src="https://static.expo.dev/static/brand/square-512x512.png"
+                        />
+                    </div>
+                    <div class="tech-item tech-image">
+                        <img
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/768px-JavaScript-logo.png"
+                        />
                     </div>
                 </div>
             </div>
