changed the second paragraph'

--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
                     </p>
                     <p>
                         I built this website on my own with no prior experience
-                        with HTML and CSS. There was a lot to learn but I
-                        somehow got it up and running. Also, if there are any
-                        bugs or problems you see on this website, please don't
-                        hesitate to let me know! Thanks!
+                        with HTML and CSS. So, if there are any bugs or problems
+                        you see on this website, please don't hesitate to let me
+                        know! Thanks!
                     </p>
                 </div>
                 <div class="about-me__vertical-menu">
