now images are fetched htpps

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Introduction  -->
         <section class="intro" id="home">
             <div class="intro-item image-cropper circle square-100 border">
-                <img class="intro__img" src="/images/my_main_pic.jpeg" />
+                <img class="intro__img" src="/assets/images/profile-pic.jpg" />
             </div>
             <div class="intro-item page-title">
                 <h1 class="section__title section__title--intro">
