small changes on naming

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/pages/my-projects.html">My Projects</a></li>
+                    <li><a href="/pages/my-projects.html">Projects</a></li>
                     <li><a href="/resume.pdf">Resume</a></li>
                     <li><a href="/pages/my-photos.html">Photos</a></li>
                 </ul>
@@ -61,8 +61,8 @@
             </div>
             <div class="intro-item">
                 <h2 class="section_subtitle section__subtitle--intro">
-                    4th Year Computer Engineering Student at <br />
-                    the University of British Columbia.
+                    4th Year Computer Engineering Student <br />
+                    at the University of British Columbia.
                 </h2>
             </div>
         </section>
