--- a/pages/my-photos.html
+++ b/pages/my-photos.html
@@ -33,7 +33,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="/../index.html">Home</a></li>
-                    <li><a href="/pages/my-projects.html">My Projects</a></li>
+                    <li><a href="/pages/my-projects.html">Projects</a></li>
                     <li><a href="/pages/my-photos.html">Photos</a></li>
                 </ul>
                 <div class="burger">
