intro text modified

--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
                         to learn all about them.
                     </p>
                     <p>
-                        I built this website on my own with no prior experience
-                        with HTML and CSS. So, if there are any bugs or problems
-                        you see on this website, please don't hesitate to let me
-                        know! Thanks!
+                        This website is built with HTML, CSS and JavaScript.
+                        Hosted for free on GithHub Pages. I built this website
+                        on my own with no prior experience with HTML and CSS.
+                        So, if there are any bugs or problems you see on this
+                        website, please don't hesitate to let me know! Thanks!
                     </p>
                 </div>
                 <div class="about-me__vertical-menu">
